--- a/app/frontend/assets/styles/components/_animations.scss
+++ b/app/frontend/assets/styles/components/_animations.scss
@@ -24,3 +24,24 @@
         transform: rotate(360deg);
     }
 }
+
+@keyframes slide-in-from-top {
+    0% {
+        opacity: 0;
+        transform: translateY(-10px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+@keyframes slide-in-from-bottom {
+    0% {
+        opacity: 0;
+        transform: translateY(10px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
