Styling the snack

--- a/app/frontend/assets/styles/_theme.scss
+++ b/app/frontend/assets/styles/_theme.scss
@@ -25,7 +25,9 @@ $blue-light: #0079b8;
 $blue-dark: #083968;
 $greenblue: #00846d;
 $red-tint02: #d70d0d;
+$yellow-200: #fff9eb;
 $yellow-400: #fff1ce;
+$red-200: #fcf0f0;
 $red-400: #ffd5d5;
 $blue-100: #f7f9fa;
 $blue-200: #eaeef1;
