--- a/app/frontend/assets/styles/components/_alert.scss
+++ b/app/frontend/assets/styles/components/_alert.scss
@@ -69,12 +69,9 @@
     top: 35px;
     left: 50%;
     transform: translateX(-50%);
-    box-shadow: 0 4px 14px 0 rgba(0, 0, 0, 0.07);
     z-index: 1000;
-    background-color: $white;
-    border-radius: 8px;
-    opacity: 0;
-    animation: slide-in-from-top 2 * $transition-duration-default ease-in-out forwards 0.5s;
+    // transition-property: opacity, display;
+    // transition-duration: 1s;
 
     &--snack {
         max-width: 714px;
@@ -86,6 +83,17 @@
         gap: 10px;
         padding: 0.75em 2em 0.75em 0.75em;
         position: relative;
+        background-color: $white;
+        border-radius: 8px;
+        box-shadow: 0 4px 14px 0 rgba(0, 0, 0, 0.07);
+        margin-bottom: 1em;
+        opacity: 0;
+        animation: slide-in-from-top 2 * $transition-duration-default $transition-ease-default
+            forwards 0.5s;
+
+        &.hide {
+            animation: fade-out 2 * $transition-duration-default $transition-ease-default forwards;
+        }
 
         .container__icon {
             min-width: 30px;
