--- a/app/apps/main/templates/base.html
+++ b/app/apps/main/templates/base.html
@@ -75,71 +75,8 @@
     </head>
     <body class="{% block body_class %}{% endblock body_class %}">
         <a href="#id_maincontent" class="skiplink">Ga direct naar de content</a>
-        <div class="container__notification container__notification--snack"
-             {% comment %}
-             type
-             snack
-             or
-             toast
-             {% endcomment %}
-             data-controller="notificatie">
-            <div class="notification {% comment %} level warning or error {% endcomment %}">
-                <div class="container__icon">
-                    {% comment %} if level is warning {% endcomment %}
-                    {% include "icons/warning_triangle2.svg" %}
-                    {% comment %} elif level is error {% endcomment %}
-                    {% include "icons/error_square.svg" %}
-                    {% comment %} else {% endcomment %}
-                    {% include "icons/check_circle.svg" %}
-                    {% comment %} endif {% endcomment %}
-                </div>
-                <div class="container__content">
-                    {% comment %} if title {% endcomment %}
-                    <h3>Titel</h3>
-                    {% comment %} endif {% endcomment %}
-                    <div class="container__message">
-                        <p>
-                            Op zaterdag 24-12-2024 van 8:00 t/m zondag 25-12-2024 21:00 zal er onderhoud plaatsvinden aan de servers. Houdt rekening met een slechtere bereikbaarheid.
-                        </p>
-                        {% comment %} if link {% endcomment %}
-                        <a href="">Meer info</a>
-                        {% comment %} endif {% endcomment %}
-                    </div>
-                </div>
-                <button type="button"
-                        class="btn-close--small"
-                        aria-label="Sluit"
-                        data-action="notificatie#hideNotification">{% include "icons/close.svg" %}</button>
-            </div>
-            <div class="notification {% comment %} level warning or error {% endcomment %}">
-                <div class="container__icon">
-                    {% comment %} if level is warning {% endcomment %}
-                    {% include "icons/warning_triangle2.svg" %}
-                    {% comment %} elif level is error {% endcomment %}
-                    {% include "icons/error_square.svg" %}
-                    {% comment %} else {% endcomment %}
-                    {% include "icons/check_circle.svg" %}
-                    {% comment %} endif {% endcomment %}
-                </div>
-                <div class="container__content">
-                    {% comment %} if title {% endcomment %}
-                    <h3>Titel</h3>
-                    {% comment %} endif {% endcomment %}
-                    <div class="container__message">
-                        <p>
-                            Op zaterdag 24-12-2024 van 8:00 t/m zondag 25-12-2024 21:00 zal er onderhoud plaatsvinden aan de servers. Houdt rekening met een slechtere bereikbaarheid.
-                        </p>
-                        {% comment %} if link {% endcomment %}
-                        <a href="">Meer info</a>
-                        {% comment %} endif {% endcomment %}
-                    </div>
-                </div>
-                <button type="button"
-                        class="btn-close--small"
-                        aria-label="Sluit"
-                        data-action="notificatie#hideNotification">{% include "icons/close.svg" %}</button>
-            </div>
-        </div>
+        <turbo-frame src="{% url 'notificatie_lijst_public' %}" id="notificatie_lijst_public">
+        </turbo-frame>
         <div class="container__toplevel">
             {% block aside %}
                 {% include "snippets/aside.html" %}
