--- a/app/apps/release_notes/templates/beheer/release_note_aanmaken.html
+++ b/app/apps/release_notes/templates/beheer/release_note_aanmaken.html
@@ -29,17 +29,34 @@
                       method="post"
                       id="releaseNoteForm"
                       enctype="multipart/form-data"
-                      data-turbo-frame="_top">
+                      data-controller="berichten-beheer">
                     {% csrf_token %}
                     {{ form.management_form }}
                     {{ form.media }}
                     <fieldset>
+                        <div class="form-control__with-helptext js-validation">{{ form.bericht_type|render_rotterdam_formulier }}</div>
+                        <div class="form-control__with-helptext js-validation"
+                             data-berichten-beheer-target="notificatie hideable">
+                            {{ form.notificatie_type|render_rotterdam_formulier }}
+                        </div>
+                        <div class="form-control__with-helptext js-validation"
+                             data-berichten-beheer-target="notificatie hideable">
+                            {{ form.notificatie_niveau|render_rotterdam_formulier }}
+                        </div>
                         <div class="form-control__with-helptext js-validation">{{ form.titel|render_rotterdam_formulier }}</div>
                         <div class="form-control__with-helptext js-validation padding-bottom-2x"
-                             data-testid="text_editor">{{ form.beschrijving }}</div>
+                             data-testid="text_editor"
+                             data-berichten-beheer-target="releaseNote hideable">{{ form.beschrijving }}</div>
                         <div class="form-control__with-helptext js-validation full-width"
-                             data-controller="bijlagen">{{ form.bijlagen|render_rotterdam_formulier }}</div>
+                             data-controller="bijlagen"
+                             data-berichten-beheer-target="releaseNote hideable">
+                            {{ form.bijlagen|render_rotterdam_formulier }}
+                        </div>
                         <div class="form-control__with-helptext js-validation">{{ form.publicatie_datum|render_rotterdam_formulier }}</div>
+                        <div class="form-control__with-helptext js-validation"
+                             data-berichten-beheer-target="notificatie hideable">
+                            {{ form.einde_publicatie_datum|render_rotterdam_formulier }}
+                        </div>
                         {% if form.versie %}
                             <div class="form-control__with-helptext js-validation">{{ form.versie|render_rotterdam_formulier }}</div>
                         {% endif %}
