--- a/app/frontend/assets/styles/components/_alert.scss
+++ b/app/frontend/assets/styles/components/_alert.scss
@@ -106,20 +106,20 @@
             margin-top: 0;
         }
         & + .notification {
-            margin-top: -134px;
+            margin-top: -184px;
         }
 
         @for $i from 1 through 10 {
             &:nth-child(#{$i}n) {
-                z-index: #{$i * -10};
-                transform: translateY(0) scale(#{1.02 - $i * 0.02});
+                // z-index: #{$i * -10};
+                transform: translateY(0) scale(#{0.98 + $i * 0.02});
             }
         }
 
         &.show,
         &.init {
             opacity: 1;
-            height: auto;
+            height: 120px;
             display: flex;
             justify-content: flex-start;
             gap: 10px;
