refactor login logout flow

--- a/app/apps/main/templates/base.html
+++ b/app/apps/main/templates/base.html
@@ -38,6 +38,7 @@
               href="{{ base_url }}{% webpack_static 'images/favicon.ico' %}" />
         <script src="/static/rdam.geojson" type="text/javascript"></script>
         <meta name="turbo-cache-control" content="no-cache">
+        <meta name="turbo-prefetch" content="false">
         {% block stylesheets %}
             <link rel="stylesheet"
                   href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
