--- a/app/apps/release_notes/templates/public/notificaties/notificatie_lijst.html
+++ b/app/apps/release_notes/templates/public/notificaties/notificatie_lijst.html
@@ -8,7 +8,7 @@
     </ul>
 </div>
 <div class="container__notification container__notification--toast"
-     data-controller="notificatie">
+     data-controller="notificatielijst">
     <ul class="list-notifications">
         {% for object in toast %}
             {% include "public/notificaties/notificatie.html" with object=object only %}
