Fix merge conflicts

--- a/app/apps/release_notes/templates/public/notificaties/notificatie.html
+++ b/app/apps/release_notes/templates/public/notificaties/notificatie.html
@@ -17,4 +17,4 @@
             class="btn-close--small"
             aria-label="Sluit"
             data-action="notificatielijst#hideNotification">{% include "icons/close.svg" %}</button>
-</li>
+</div>
